<resources>
    <string name="app_name">UsIt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="already_account">Already have an account? Login Here</string>
    <string name="orWith">Or With</string>
    <string name="not_yet_registered">Not yet registered? Sign Up here</string>

    <string name="name">Name</string>
    <string name="email">E-mail Id</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="ngo_sign_up">NGO sign up</string>

    <string name="upload_item">Upload an Item</string>

    <string name="my_profile">My Profile</string>
    <string name="history">History</string>

    <string name="item_mane">Product</string>
    <string name="item_description">Description</string>
    <string name="item_exchanges">Valid Exchanges</string>
    <string name="item_seller">Exchanger</string>
    <string name="item_location">Product available at</string>

    <string name="logout">Log out</string>
    <string name="all_rights_are_reserved">All rights reserved</string>
    <string name="skip">Skip</string>
    <string name="create_account">Create an UsIt account</string>
    <string name="tagline">One account for everything, UsIt</string>
    <string name="learn_more">Learn More</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot Password</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="edit_location">Location</string>

    <string name="login_profile_activity">Login to view profile</string>

</resources>