<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/almendra_bold_italic"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

    <EditText
        android:id="@+id/name_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/ngo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>