<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="#CD8844">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


<!--    <CheckBox-->
<!--        android:id="@+id/checkBox"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="158dp"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:layout_marginEnd="159dp"-->
<!--        android:text="@string/ngo_sign_up"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:shadowColor="#0E0E0E"
                android:text="@string/create_account"
                android:textColor="#2E2D2D"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/tagline"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/learn_more"
                android:textColor="#0E5EA5"/>

            <View
                android:layout_width="70dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#0E5EA5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Avishkar2021.TextInputLayout"
                android:hint="@string/name"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                app:startIconDrawable="@drawable/avatar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Avishkar2021.TextInputLayout"
                android:hint="@string/email"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Avishkar2021.TextInputLayout"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_gradient"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="serif"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <View
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:background="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/orWith"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:background="#000000"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <TextView
                    android:id="@+id/fb_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/fbcolor"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Facebook"
                    android:textColor="#FAF7F7"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/facebook" />

                <TextView
                    android:id="@+id/google_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/gcolor"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Google"
                    android:textColor="#FAF7F7"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/google" />
            </LinearLayout>

            <!---<TextView
                android:id="@+id/phone_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:background="@color/phonecolor"
                android:gravity="center"
                android:padding="10dp"
                android:text="    Phone     "
                android:textColor="#FAF7F7"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:drawableStartCompat="@drawable/phone" /> -->


            <TextView
                android:id="@+id/signIn_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/already_account"
                android:textColor="@color/purple_700"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>