<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/signin_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/signin_background"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="158dp"
        android:text="@string/signin"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:background="@drawable/signin_btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <View
        android:id="@+id/view1"
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginTop="15dp"
        android:background="#000000"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/orWith"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/view1"
        app:layout_constraintTop_toBottomOf="@+id/signin_button" />

    <View
        android:id="@+id/view2"
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="120dp"
        android:background="#000000"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_button" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/fb_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/fbcolor"
            android:gravity="center"
            android:padding="10dp"
            android:text="Facebook"
            android:textColor="#FAF7F7"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/facebook" />

        <TextView
            android:id="@+id/google_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/gcolor"
            android:gravity="center"
            android:padding="10dp"
            android:text="Google"
            android:textColor="#FAF7F7"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/google" />
    </LinearLayout>

    <TextView
        android:id="@+id/phone_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="13dp"
        android:layout_weight="1"
        android:background="@color/phonecolor"
        android:gravity="center"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="   Phone    "
        android:textColor="#FAF7F7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:drawableStartCompat="@drawable/phone" />


    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="175dp"
        android:text="@string/not_yet_registered"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_btn"
        />



</androidx.constraintlayout.widget.ConstraintLayout>